--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,9 @@
-﻿altgraph==0.17
-astroid==2.5.6
-autopep8==1.5.6
-beautifulsoup4==4.9.3
-cachetools==4.2.1
-certifi==2020.12.5
-chardet==4.0.0
-colorama==0.4.4
-cycler==0.10.0
-future==0.18.2
-google==3.0.0
-google-api-core==1.26.2
-google-api-python-client==2.0.2
-google-auth==1.28.0
-google-auth-httplib2==0.1.0
-googleapis-common-protos==1.53.0
-httplib2==0.19.0
-idna==2.10
-isort==5.8.0
-kiwisolver==1.3.1
-lazy-object-proxy==1.6.0
-lxml==4.6.5
-matplotlib==3.4.2
-mccabe==0.6.1
-numpy==1.21.0
-packaging==20.9
-pandas==1.2.3
-pefile==2019.4.18
-Pillow==9.0.0
-protobuf==3.15.6
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.7.0
-pycryptodomex==3.10.1
-pyinstaller==4.3
-pyinstaller-hooks-contrib==2021.1
-pylint==2.8.3
-pyparsing==2.4.7
-pypiwin32==223
-python-dateutil==2.8.1
-pytz==2021.1
-pywin32==301
-pywin32-ctypes==0.2.0
-PyYAML==5.4.1
-requests==2.25.1
-rsa==4.7.2
-six==1.15.0
-soupsieve==2.2.1
-steam==1.2.0
-toml==0.10.2
-uritemplate==3.0.1
-urllib3==1.26.6
-vdf==3.3
-win10toast==0.9
-wrapt==1.12.1
-XlsxWriter==1.3.7
+﻿pylint
+numpy
+pandas
+steam
+lxml
+requests
+bs4
+matplotlib
+google-api-python-client
