--- a/.github/workflows/pyinstaller_windows.yml
+++ b/.github/workflows/pyinstaller_windows.yml
@@ -3,7 +3,7 @@ name: Compilar ejecutable para Windows con Pyinstaller
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, dev]
 
 jobs:
   build:
