--- a/.github/workflows/pyinstaller_windows.yml
+++ b/.github/workflows/pyinstaller_windows.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Compilar aplicación
       uses: JackMcKew/pyinstaller-action-windows@main
       with:
-        path: /
+        path: .
     - name: Subir artefacto
       uses: actions/upload-artifact@v3.1.0
       with:
