--- a/.github/workflows/pyinstaller_windows.yml
+++ b/.github/workflows/pyinstaller_windows.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Compilar aplicación
-      uses: JackMcKew/pyinstaller-action-windows@main
+      uses: JackMcKew/pyinstaller-action-windows@v0.1.2
       with:
         path: .
     - name: Subir artefacto
